# sorteia

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
sorteia/: __init__.py  analise.py  cli.py  demo.py  fontes.py  icone.py  jogos.py  palpite.py  web.py
testes/: test_sorteia.py  test_web.py
