[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sorteia"
version = "1.0.0"
description = "SorteIA — sorteador palpiteiro inteligente das Loterias Caixa"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ademir Agência" }]
keywords = ["loteria", "caixa", "megasena", "lotofacil", "palpites", "estatistica"]

[project.scripts]
sorteia = "sorteia.cli:main"

[tool.setuptools.packages.find]
include = ["sorteia*"]
